fixed site_edit, styled scrollbar

--- a/core/css/style.css
+++ b/core/css/style.css
@@ -21,6 +21,30 @@ html, body {
 	vertical-align: top;
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    /* background: rgba(21, 126, 251, .8); */
+	background: rgba(13, 95, 163, 0.8);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	/* background: rgba(21, 126, 251, .2); */
+	background: rgba(13, 95, 163, 0.2);
+}
+
 b, strong, th {
 	font-weight: bold;
 }
